--- a/html-css/index.html
+++ b/html-css/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="images/Owl.ico" type="image/x-icon">
     <title>Aulas Curso em Video</title>
 </head>
 <body>
-    <h1>Olá, mundo!</h1>
+    <h1>Olá!</h1>
     <hr>
-    <p>Teste.</p>
+    <p>Teste favicon.</p>
 </body>
 </html>
