Criando listas com links

--- a/html-css/index.html
+++ b/html-css/index.html
@@ -8,7 +8,20 @@
 </head>
 <body>
     <h1>Olá!</h1>
+    <h2>Quem sou eu?</h2>
+    <img src="images/thais300.png" alt="Imagem Thais">
     <hr>
-    <p>Teste favicon.</p>
+    <p>Meu nome é Thaís Coelho, sou formada em arquitetura e atualmente estudante de programação. 
+        Brasileiras mas atualmente residente em Portugal junto com meu marido, 
+        tendo novas experiências, aprendizados e cultura.
+    </p>
+    <h2>Como me encontrar?</h2>
+    <ul type="square">
+        <li><img src="images/Github16.16.png" alt="Logo Github"> <a href="https://github.com/ThaisHolz" target="_blank" rel="external">/ThaisHolz</a> - Meu repositório no Github</li>
+
+        <li><img src="images/Camera.16.png" alt="Imagem camera"> <a href="https://www.instagram.com/thais.holz/" target="_blank" rel="external">/thais.holz</a> - Meu perfil no Instagram</li>
+
+        <li><img src="images/twitter.16.png" alt="Logo Twitter"> <a href="https://twitter.com/tcristine8" target="_blank" rel="external">/tcristine8</a> - Meu perfil no Twitter</li>
+    </ul>
 </body>
 </html>
