--- a/html-css/index.html
+++ b/html-css/index.html
@@ -23,5 +23,9 @@
 
         <li><img src="images/twitter.16.png" alt="Logo Twitter"> <a href="https://twitter.com/tcristine8" target="_blank" rel="external">/tcristine8</a> - Meu perfil no Twitter</li>
     </ul>
+
+    <video width="500" controls>
+        <source src="videos/gatinho.mp4" type="video/mp4">
+    </video>
 </body>
 </html>
