--- a/html-css/index.html
+++ b/html-css/index.html
@@ -5,6 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     <title>Aulas Curso em Video</title>
+    <style>
+        body{
+            background-color: antiquewhite;
+            font-family: Arial;
+            font-size: 20px;
+        }
+
+        h1{
+            color: black;
+            background-color: rgb(205, 166, 104);
+        }
+
+        h2{
+            color: black;
+        }
+
+        p{
+            text-align: justify;
+        }
+    </style>
 </head>
 <body>
     <h1>Olá!</h1>
