--- a/html-css/index.html
+++ b/html-css/index.html
@@ -3,30 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/cat.ico" type="image/x-icon">
     <title>Aulas Curso em Video</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Olá!</h1>
     <h2>Quem sou eu?</h2>
-    <img src="images/thais300.png" alt="Imagem Thais">
     <hr>
-    <p>Meu nome é Thaís Coelho, sou formada em arquitetura e atualmente estudante de programação. 
-        Brasileiras mas atualmente residente em Portugal junto com meu marido, 
-        tendo novas experiências, aprendizados e cultura.
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci dolores eos tempore cupiditate veniam saepe tempora incidunt dolore aliquam porro repellendus, repellat laborum ullam atque maiores ipsa accusantium quia eius?
     </p>
     <h2>Como me encontrar?</h2>
     <ul type="square">
         <li><img src="images/Github16.16.png" alt="Logo Github"> <a href="https://github.com/ThaisHolz" target="_blank" rel="external">/ThaisHolz</a> - Meu repositório no Github</li>
 
-        <li><img src="images/Camera.16.png" alt="Imagem camera"> <a href="https://www.instagram.com/thais.holz/" target="_blank" rel="external">/thais.holz</a> - Meu perfil no Instagram</li>
-
-        <li><img src="images/twitter.16.png" alt="Logo Twitter"> <a href="https://twitter.com/tcristine8" target="_blank" rel="external">/tcristine8</a> - Meu perfil no Twitter</li>
+        <li><img src="images/cat_instagram.png" alt="Imagem camera"> <a href= target="_blank" rel="external">/</a> - Meu perfil no Instagram</li>
     </ul>
-
-    <video width="500" controls>
-        <source src="videos/gatinho.mp4" type="video/mp4">
-    </video>
 </body>
 </html>
