Criando estilo com cores

--- a/html-css/index.html
+++ b/html-css/index.html
@@ -4,20 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="images/cat.ico" type="image/x-icon">
-    <title>Aulas Curso em Video</title>
+    <title>CatLand</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Olá!</h1>
-    <h2>Quem sou eu?</h2>
-    <hr>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci dolores eos tempore cupiditate veniam saepe tempora incidunt dolore aliquam porro repellendus, repellat laborum ullam atque maiores ipsa accusantium quia eius?
-    </p>
-    <h2>Como me encontrar?</h2>
-    <ul type="square">
-        <li><img src="images/Github16.16.png" alt="Logo Github"> <a href="https://github.com/ThaisHolz" target="_blank" rel="external">/ThaisHolz</a> - Meu repositório no Github</li>
-
-        <li><img src="images/cat_instagram.png" alt="Imagem camera"> <a href= target="_blank" rel="external">/</a> - Meu perfil no Instagram</li>
-    </ul>
+    <main>
+        <h1>Gatos!</h1>
+        <h2>Título 1</h2>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci dolores eos tempore cupiditate veniam saepe tempora incidunt dolore aliquam porro repellendus, repellat laborum ullam atque maiores ipsa accusantium quia eius?
+        </p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci dolores eos tempore cupiditate veniam saepe tempora incidunt dolore aliquam porro repellendus, repellat laborum ullam atque maiores ipsa accusantium quia eius?
+        </p>
+    </main>
 </body>
 </html>
