--- a/html-css/index.html
+++ b/html-css/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <main>
-        <h1>Gatos!</h1>
+        <h1>&lt; Gatos! &gt;</h1>
         <h2>Título 1</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci dolores eos tempore cupiditate veniam saepe tempora incidunt dolore aliquam porro repellendus, repellat laborum ullam atque maiores ipsa accusantium quia eius?</p>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci dolores eos tempore cupiditate veniam saepe tempora incidunt dolore aliquam porro repellendus, repellat laborum ullam atque maiores ipsa accusantium quia eius?</p>
