--- a/html-css/index.html
+++ b/html-css/index.html
@@ -8,14 +8,29 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <main>
+    <header>
         <h1>&lt; Gatos! &gt;</h1>
-        <h2>Título 1</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci dolores eos tempore cupiditate veniam saepe tempora incidunt dolore aliquam porro repellendus, repellat laborum ullam atque maiores ipsa accusantium quia eius?</p>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci dolores eos tempore cupiditate veniam saepe tempora incidunt dolore aliquam porro repellendus, repellat laborum ullam atque maiores ipsa accusantium quia eius?</p>
-        <h2>Título 2</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci dolores eos tempore cupiditate veniam saepe tempora incidunt dolore aliquam porro repellendus, repellat laborum ullam atque maiores ipsa accusantium quia eius?</p>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci dolores eos tempore cupiditate veniam saepe tempora incidunt dolore aliquam porro repellendus, repellat laborum ullam atque maiores ipsa accusantium quia eius?</p>
+        <nav>
+            <a href="#">Link</a>
+            <a href="#">Link</a>
+            <a href="#">Link</a>
+            <a href="#">Link</a>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <article>
+                <h2><span>u</span> Título 1</h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci dolores eos tempore cupiditate veniam saepe tempora incidunt dolore aliquam porro repellendus, repellat laborum ullam atque maiores ipsa accusantium quia eius?</p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci dolores eos tempore cupiditate veniam saepe tempora incidunt dolore aliquam porro repellendus, repellat laborum ullam atque maiores ipsa accusantium quia eius?</p>
+                <h2><span>u</span> Título 2</h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci dolores eos tempore cupiditate veniam saepe tempora incidunt dolore aliquam porro repellendus, repellat laborum ullam atque maiores ipsa accusantium quia eius?</p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci dolores eos tempore cupiditate veniam saepe tempora incidunt dolore aliquam porro repellendus, repellat laborum ullam atque maiores ipsa accusantium quia eius?</p>
+                    <aside>
+                        <p>Escrito por T.</p>
+                    </aside>
+            </article>
+        </section>
     </main>
 </body>
 </html>
