--- a/html-css/index.html
+++ b/html-css/index.html
@@ -32,5 +32,8 @@
             </article>
         </section>
     </main>
+    <footer>
+        <p>Desenvolvido por Thaís Coelho</p>
+    </footer>
 </body>
 </html>
