--- a/html-css/index.html
+++ b/html-css/index.html
@@ -20,14 +20,16 @@
     <main>
         <section>
             <article>
-                <h2><span>u</span> Título 1</h2>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci dolores eos tempore cupiditate veniam saepe tempora incidunt dolore aliquam porro repellendus, repellat laborum ullam atque maiores ipsa accusantium quia eius?</p>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci dolores eos tempore cupiditate veniam saepe tempora incidunt dolore aliquam porro repellendus, repellat laborum ullam atque maiores ipsa accusantium quia eius?</p>
-                <h2><span>u</span> Título 2</h2>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci dolores eos tempore cupiditate veniam saepe tempora incidunt dolore aliquam porro repellendus, repellat laborum ullam atque maiores ipsa accusantium quia eius?</p>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci dolores eos tempore cupiditate veniam saepe tempora incidunt dolore aliquam porro repellendus, repellat laborum ullam atque maiores ipsa accusantium quia eius?</p>
+                <h2><span>u</span> Breve história</h2>
+                    <p>A primeira associação dos gatos com os humanos da qual se tem evidência ocorreu há cerca de 9 500 anos. Acredita-se que o gato-selvagem-africano (Felis silvestris lybica) era seu antepassado imediato.</p>
+                    <p>Existem cerca de 250 raças de gato doméstico e podme viver entre quinze e vinte anos. Devido à sua personalidade independente, tornou-se animal de companhia em diversos lares ao redor do mundo, agradando pessoas dos mais variados estilos de vida. Na cultura humana, figura da mitologia às superstições, passando por personagens de desenhos animados, tiras de jornais, filmes e contos de fadas. Entre suas mais conhecidas representações estão Tom, O Gato de Botas, Garfield, Frajola etc.</p>
+                <h2><span>u</span> Comportamento</h2>
+                    <p>Os gatos de pelo curto tendem a ser mais magros e fisicamente mais ativos, enquanto os gatos de pelo comprido tendem a ser mais pesados e letárgicos. Entretanto, a maioria dos gatos partilha um mesmo comportamento: são extremamente curiosos.</p>
+                    <p>O comportamento dos gatos depende de cada indivíduo, do momento do dia e até mesmo das condições climáticas. Gatos que nasceram ou cresceram em meio selvagem, sem manterem contato direto com seres humanos, costumam se unir em agrupamentos formados por diversos animais. Os animais que vivem nessa situação recebem o nome de gatos ferais.</p>
+                    <h2><span>u</span> Comunicação</h2>
+                    <p>Os gatos conseguem comunicar-se de forma bastante eficaz, seja com humanos ou com outros seres de sua espécie. O cérebro destes animais apresenta estruturas complexas que possibilita-lhes desenvolver uma espécie de linguagem, comunicando-se por meio de miados, ronronares, bufos, gritos e linguagens corporais.</p>
                     <aside>
-                        <p>Escrito por T.</p>
+                        <p>Trechos retirados da <a href="https://pt.wikipedia.org/wiki/Gato">Wikipedia</a></p>
                     </aside>
             </article>
         </section>
