Pequenas alterações e uso de variavel no css

--- a/html-css/index.html
+++ b/html-css/index.html
@@ -11,10 +11,10 @@
     <header>
         <h1>&lt; Gatos! &gt;</h1>
         <nav>
-            <a href="#">Link</a>
-            <a href="#">Link</a>
-            <a href="#">Link</a>
-            <a href="#">Link</a>
+            <a href="#">Home</a>
+            <a href="#" target="_blank">Sobre</a>
+            <a href="#" target="_blank">Loja</a>
+            <a href="#" target="_blank">Contato</a>
         </nav>
     </header>
     <main>
@@ -29,7 +29,7 @@
                     <h2><span>u</span> Comunicação</h2>
                     <p>Os gatos conseguem comunicar-se de forma bastante eficaz, seja com humanos ou com outros seres de sua espécie. O cérebro destes animais apresenta estruturas complexas que possibilita-lhes desenvolver uma espécie de linguagem, comunicando-se por meio de miados, ronronares, bufos, gritos e linguagens corporais.</p>
                     <aside>
-                        <p>Trechos retirados da <a href="https://pt.wikipedia.org/wiki/Gato">Wikipedia</a></p>
+                        <p>Trechos retirados da <a href="https://pt.wikipedia.org/wiki/Gato" target="_blank">Wikipedia</a></p>
                     </aside>
             </article>
         </section>
