Add video e inicio de responsividade

--- a/html-css/index.html
+++ b/html-css/index.html
@@ -27,7 +27,11 @@
                     <p>Os gatos de pelo curto tendem a ser mais magros e fisicamente mais ativos, enquanto os gatos de pelo comprido tendem a ser mais pesados e letárgicos. Entretanto, a maioria dos gatos partilha um mesmo comportamento: são extremamente curiosos.</p>
                     <p>O comportamento dos gatos depende de cada indivíduo, do momento do dia e até mesmo das condições climáticas. Gatos que nasceram ou cresceram em meio selvagem, sem manterem contato direto com seres humanos, costumam se unir em agrupamentos formados por diversos animais. Os animais que vivem nessa situação recebem o nome de gatos ferais.</p>
                     <h2><span>u</span> Comunicação</h2>
-                    <p>Os gatos conseguem comunicar-se de forma bastante eficaz, seja com humanos ou com outros seres de sua espécie. O cérebro destes animais apresenta estruturas complexas que possibilita-lhes desenvolver uma espécie de linguagem, comunicando-se por meio de miados, ronronares, bufos, gritos e linguagens corporais.</p>
+                    <p>Os gatos conseguem comunicar-se de forma bastante eficaz, seja com humanos ou com outros seres de sua espécie. O cérebro destes animais apresenta estruturas complexas que possibilita-lhes desenvolver uma espécie de linguagem, comunicando-se por meio de miados, ronronares, bufos, gritos e linguagens corporais.
+                    <nav>
+                        <video controls src="videos/gatinho.mp4" type="video/mp4"></video>
+                    </nav></p>
+                    
                     <aside>
                         <p>Trechos retirados da <a href="https://pt.wikipedia.org/wiki/Gato" target="_blank">Wikipedia</a></p>
                     </aside>
