--- a/html-css/index.html
+++ b/html-css/index.html
@@ -23,6 +23,10 @@
                 <h2><span>u</span> Breve história</h2>
                     <p>A primeira associação dos gatos com os humanos da qual se tem evidência ocorreu há cerca de 9 500 anos. Acredita-se que o gato-selvagem-africano (Felis silvestris lybica) era seu antepassado imediato.</p>
                     <p>Existem cerca de 250 raças de gato doméstico e podme viver entre quinze e vinte anos. Devido à sua personalidade independente, tornou-se animal de companhia em diversos lares ao redor do mundo, agradando pessoas dos mais variados estilos de vida. Na cultura humana, figura da mitologia às superstições, passando por personagens de desenhos animados, tiras de jornais, filmes e contos de fadas. Entre suas mais conhecidas representações estão Tom, O Gato de Botas, Garfield, Frajola etc.</p>
+                    <picture>
+                        <source media="(max-width:670px)" srcset="images/gatos_egito_pq.png">
+                        <img src="images/gatos_egito_gd.png" alt="Desenho ilustrativo de gato no Egito antigo">
+                    </picture>
                 <h2><span>u</span> Comportamento</h2>
                     <p>Os gatos de pelo curto tendem a ser mais magros e fisicamente mais ativos, enquanto os gatos de pelo comprido tendem a ser mais pesados e letárgicos. Entretanto, a maioria dos gatos partilha um mesmo comportamento: são extremamente curiosos.</p>
                     <p>O comportamento dos gatos depende de cada indivíduo, do momento do dia e até mesmo das condições climáticas. Gatos que nasceram ou cresceram em meio selvagem, sem manterem contato direto com seres humanos, costumam se unir em agrupamentos formados por diversos animais. Os animais que vivem nessa situação recebem o nome de gatos ferais.</p>
