Criando a pagina de contato

--- a/html-css/index.html
+++ b/html-css/index.html
@@ -14,7 +14,7 @@
             <a href="#">Home</a>
             <a href="#" target="_blank">Sobre</a>
             <a href="#" target="_blank">Loja</a>
-            <a href="#" target="_blank">Contato</a>
+            <a href="contato.html" target="_blank">Contato</a>
         </nav>
     </header>
     <main>
