Estudo de tabela

--- a/html-css/contato.html
+++ b/html-css/contato.html
@@ -12,8 +12,24 @@
         <h1>&lt; Fale conosco! &gt;</h1>
     </header>
     <main>
-        
+        <table>
+            <tr>
+                <td>A1</td>
+                <td>B1</td>
+                <td>C1</td>
+            </tr>
+            <tr>
+                <td>A2</td>
+                <td>B2</td>
+                <td>C2</td>
+            </tr>
+            <tr>
+                <td>A3</td>
+                <td>B3</td>
+                <td>C3</td>
+            </tr>
+        </table>
     </main>
-    <a href="index.html">Voltar</a>
+    <nav><a href="index.html">Voltar</a></nav>
 </body>
 </html>
