Modelos de tabelas

--- a/html-css/contato.html
+++ b/html-css/contato.html
@@ -29,6 +29,21 @@
                 <td>C3</td>
             </tr>
         </table>
+        <h2>Tabelas grandes</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th>Nome</th>
+                    <th>Telefone</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Paulo</td>
+                    <td>450 919 049</td>
+                </tr>
+            </tbody>
+        </table>
     </main>
     <nav><a href="index.html">Voltar</a></nav>
 </body>
