--- a/exercicios-tabelas.html/tab002.html
+++ b/exercicios-tabelas.html/tab002.html
@@ -32,7 +32,7 @@
             <tr>
                 <th rowspan="2" scope="col">Área</th>
                 <th rowspan="2" scope="col">Disciplinas</th>
-                <th rowspan="2" scope="colgroup" colspan="2">Notas</th>
+                <th colspan="2" scope="colgroup">Notas</th>
                 <th rowspan="2" scope="col">Média</th>
             </tr>
             <tr>
