Finalizando exercicio de iframe

--- a/tabelas-iframes/iframe001.html
+++ b/tabelas-iframes/iframe001.html
@@ -19,9 +19,9 @@
     <h1>Teste de iframe</h1>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum expedita natus velit debitis atque, laudantium nemo nostrum sequi obcaecati nihil ullam animi dolor illum illo! Nulla iure beatae voluptates autem!</p>
     <ul>
-        <li><a href="tab000.html"></a>Primeira página</li>
-        <li><a href="tab001.html"></a>Segunda página</li>
-        <li><a href="tab002.html"></a>Terceira página</li>
+        <li><a href="tab000.html" target="frame">Primeira página</a></li>
+        <li><a href="tab001.html" target="frame">Segunda página</a></li>
+        <li><a href="tab002.html" target="frame">Terceira página</a></li>
     </ul>
     <iframe name="frame" src="" frameborder="0">
         <p>Infelizmente seu navegador não é compatível com isso.</p>
