Add mapas no site

--- a/tabelas-iframes/iframe001.html
+++ b/tabelas-iframes/iframe001.html
@@ -27,5 +27,7 @@
         <p>Infelizmente seu navegador não é compatível com isso.</p>
     </iframe>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit consequatur atque repellendus illo dolores animi ab sint earum ut rem! Sed reprehenderit hic suscipit adipisci perferendis aut obcaecati enim at?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas deleniti repellendus consequatur officiis, temporibus quae quam odio soluta qui reprehenderit ab quidem quod architecto unde doloremque corporis consequuntur error eaque.</p>
+    <h1>Usando mapas</h1>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d48008.72488952725!2d-8.751754967086915!3d41.231678271899!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd24690a09fd219b%3A0xf85acaf1ee3bf78d!2sPraia%20da%20Mem%C3%B3ria!5e0!3m2!1spt-BR!2spt!4v1724849516604!5m2!1spt-BR!2spt" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </body>
 </html>
