--- a/html-css/contato.html
+++ b/html-css/contato.html
@@ -12,20 +12,18 @@
         <h1>&lt; Fale conosco! &gt;</h1>
     </header>
     <main>
-        <table>
-            <thead>
-                <tr>
-                    <th>Nome</th>
-                    <th>Telefone</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td></td>
-                    <td></td>
-                </tr>
-            </tbody>
-        </table>
+        <form action="cadastro.php">
+            <p><label for="inome">Nome:</label> 
+                <input type="text" name="nome" id="inome">
+            </p>
+            <p><label for="isobrenome">Sobrenome:</label> 
+                <input type="text" name="sobrenome" id="isobrenome">
+            </p>
+            <p><label for="iemail">Email:</label>
+                <input type="text" name="email" id="iemail">
+            </p>
+            <p><input type="submit" value="Enviar"></p>
+        </form>
     </main>
     <nav><a href="index.html">Voltar</a></nav>
 </body>
