Criando pagina de login

--- a/html-css/index.html
+++ b/html-css/index.html
@@ -15,6 +15,7 @@
             <a href="#" target="_blank">Sobre</a>
             <a href="#" target="_blank">Loja</a>
             <a href="contato.html" target="_blank">Contato</a>
+            <a href="login.html" target="_blank">Login</a>
         </nav>
     </header>
     <main>
