--- a/html-css/contato.html
+++ b/html-css/contato.html
@@ -13,14 +13,29 @@
     </header>
     <main>
         <form action="cadastro.php" method="post">
-            <p><label for="inome">Nome:</label> 
-                <input type="text" name="nome" id="inome">
+            <p>
+                <label for="inome">Nome:</label> 
+                <input type="text" name="nome" id="inome" required>
             </p>
-            <p><label for="isobrenome">Sobrenome:</label> 
-                <input type="text" name="sobrenome" id="isobrenome">
+            <p>
+                <label for="isobrenome">Sobrenome:</label> 
+                <input type="text" name="sobrenome" id="isobrenome" required>
             </p>
-            <p><label for="iemail">Email:</label>
-                <input type="text" name="email" id="iemail">
+            <p>
+                <label for="iemail">Email:</label>
+                <input type="email" name="email" id="iemail" required>
+            </p>
+            <p>
+                <label for="itel">Telefone:</label>
+                <input type="number" name="tel" id="itel" required>
+            </p>
+            <p>
+                <label for="iassunto">Assunto:</label>
+                <input type="text" name="assunto" id="iassunto" required>
+            </p>
+            <p>
+                <label for="icomen">Comentário:</label>
+                <textarea name="comen" id="icomen" rows="4" maxlength="200"></textarea>
             </p>
             <p>
                 <input type="submit" value="Enviar">
