Input tipo radio na pagina contato

--- a/html-css/contato.html
+++ b/html-css/contato.html
@@ -30,6 +30,14 @@
                 <input type="number" name="tel" id="itel" required>
             </p>
             <p>
+                <label for="igato">Faixa etária do gatinho:</label>
+                <input type="radio" name="fx-etaria" id="ifilhote" value="F"><label for="ifilhote">Filhote</label>
+
+                <input type="radio" name="fx-etaria" id="iadulto" value="A"><label for="iadulto">Adulto</label>
+
+                <input type="radio" name="fx-etaria" id="iidoso" value="I"><label for="iidoso">Idoso</label>
+            </p>
+            <p>
                 <label for="iassunto">Assunto:</label>
                 <input type="text" name="assunto" id="iassunto" required>
             </p>
