Alteração de pasta

--- a/html-css/contato.html
+++ b/html-css/contato.html
@@ -47,8 +47,8 @@
                 </select>
             </p>
             <p>
-                <label for="icomen">Comentário:</label>
-                <textarea name="comen" id="icomen" cols="30" rows="4" maxlength="200"></textarea>
+                <label for="icomen">Comentário:</label><br>
+                <textarea name="comen" id="icomen" cols="40" rows="4" maxlength="300"></textarea>
             </p>
             <p>
                 <input type="submit" value="Enviar">
