Criando css das media queries

--- a/exercicios/media-query/mq001/index.html
+++ b/exercicios/media-query/mq001/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
-    <link rel="stylesheet" href="/exercicios/media-query/style.css" media="screen">
+    <link rel="stylesheet" href="/exercicios/media-query/mq001/style.css" media="screen">
+    <link rel="stylesheet" href="/exercicios/media-query/mq001/impressora.css" media="print">
 </head>
 <body>
     <header>
