Add css para medias de orientações diferentes

--- a/exercicios/media-query/mq001/index.html
+++ b/exercicios/media-query/mq001/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
-    <link rel="stylesheet" href="/exercicios/media-query/mq001/style.css" media="screen">
-    <link rel="stylesheet" href="/exercicios/media-query/mq001/impressora.css" media="print">
+    <!--AQUI ESTÃO AS MEDIA QUERIES-->
+    <link rel="stylesheet" href="style.css" media="all">
+    <link rel="stylesheet" href="tela.css" media="screen">
+    <link rel="stylesheet" href="impressora.css" media="print">
+    <link rel="stylesheet" href="retrato.css" media="screen and (orientation: portrait)">
+    <link rel="stylesheet" href="paisagem.css" media="screen and (orientation: landscape)">
 </head>
 <body>
     <header>
