Deixando apenas uma css para um projeto pequeno

--- a/exercicios/media-query/mq002/index.html
+++ b/exercicios/media-query/mq002/index.html
@@ -3,29 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Media Query</title>
+    <title>Media Query 2</title>
     <!--AQUI ESTÃO AS MEDIA QUERIES-->
-    <link rel="stylesheet" href="style.css" media="all">
-    <link rel="stylesheet" href="tela.css" media="screen">
-    <link rel="stylesheet" href="impressora.css" media="print">
-    <link rel="stylesheet" href="retrato.css" media="screen and (orientation: portrait)">
-    <link rel="stylesheet" href="paisagem.css" media="screen and (orientation: landscape)">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Notícias</h1>
-        <menu>
-            <li>Esportes</li>
-            <li>Política</li>
-            <li>Tecnologia</li>
-        </menu>
-    </header>
-    <main>
-        <article>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis dolorem nulla ducimus laudantium nostrum, quas praesentium exercitationem soluta porro quod odio rerum harum pariatur saepe eligendi ratione? Quam, obcaecati voluptatem!
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui ratione dicta error nisi. In atque accusantium repudiandae fugit voluptas. Ex quis adipisci et esse quasi nisi, iusto nesciunt molestias excepturi!
-            </p>
-        </article>
-    </main>
+    <h1>Mudando orientação de imagem</h1>
 </body>
 </html>
