--- a/exercicios/media-query/mq003/index.html
+++ b/exercicios/media-query/mq003/index.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query 3</title>
+    <link rel="stylesheet" href="style.css" media="all">
+    <link rel="stylesheet" href="media-query.css">
 </head>
 <body>
-    
+    <main>
+        <h1>Testando</h1>
+        <img id="phone" src="../icon-phone.png" alt="Via smartphone">
+        <img id="tablet" src="../icon-tablet.png" alt="Via tablet">
+        <img id="print" src="../icon-print.png" alt="Via impressora">
+        <img id="pc" src="../icon-pc.png" alt="Via desktop">
+        <img id="tv" src="../icon-tv.png" alt="Via televisão">
+    </main>
 </body>
 </html>
