--- a/exercicios/media-query/mq001/index.html
+++ b/exercicios/media-query/mq001/index.html
@@ -6,29 +6,28 @@
     <title>Media Query</title>
     <!--AQUI ESTÃO AS MEDIA QUERIES-->
     <link rel="stylesheet" href="style.css" media="all">
-    <link rel="stylesheet" href="tela.css" media="screen">
-    <link rel="stylesheet" href="impressora.css" media="print">
-    <link rel="stylesheet" href="retrato.css" media="screen and (orientation: portrait)">
-    <link rel="stylesheet" href="paisagem.css" media="screen and (orientation: landscape)">
 </head>
 <body>
     <header>
         <h1>Notícias</h1>
-        <menu>
-            <li>Esportes</li>
-            <li>Política</li>
-            <li>Tecnologia</li>
-        </menu>
+            <menu>
+                <ul>
+                    <li><a href="#">Política</a></li>
+                    <li><a href="#">Esportes</a></li>
+                    <li><a href="#">Tecnologia</a></li>
+                    <li><a href="#">Cultura</a></li>
+                </ul>
+            </menu>
     </header>
     <main>
-        <h1>Aprendendo media queries</h1>
+        <h2>Aprendendo media queries</h2>
         <article>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis dolorem nulla ducimus laudantium nostrum, quas praesentium exercitationem soluta porro quod odio rerum harum pariatur saepe eligendi ratione? Quam, obcaecati voluptatem!
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui ratione dicta error nisi. In atque accusantium repudiandae fugit voluptas. Ex quis adipisci et esse quasi nisi, iusto nesciunt molestias excepturi!
             </p><br>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis dolorem nulla ducimus laudantium nostrum, quas praesentium exercitationem soluta porro quod odio rerum harum pariatur saepe eligendi ratione? Quam, obcaecati voluptatem!
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui ratione dicta error nisi. In atque accusantium repudiandae fugit voluptas. Ex quis adipisci et esse quasi nisi, iusto nesciunt molestias excepturi!
-                </p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui ratione dicta error nisi. In atque accusantium repudiandae fugit voluptas. Ex quis adipisci et esse quasi nisi, iusto nesciunt molestias excepturi! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores numquam quas officiis reprehenderit doloremque, dolore ut ea eos laborum saepe accusantium nemo dolorum illum quisquam exercitationem delectus minus hic similique.
+            </p>
         </article>
     </main>
 </body>
