--- a/exercicios/media-query/mq001/index.html
+++ b/exercicios/media-query/mq001/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=menu" />
     <!--AQUI ESTÃO AS MEDIA QUERIES-->
     <link rel="stylesheet" href="style.css" media="all">
 </head>
 <body>
     <header>
         <h1>Notícias</h1>
-            <menu>
+        <span id="burguer" class="material-symbols-outlined" onclick="clickMenu()">menu</span>
+            <menu id="menu">
                 <ul>
                     <li><a href="#">Política</a></li>
                     <li><a href="#">Esportes</a></li>
@@ -30,5 +32,14 @@
             </p>
         </article>
     </main>
+    <script>
+        function clickMenu() {
+            if(menu.style.display == 'block'){
+                menu.style.display = 'none'
+            } else{
+                menu.style.display = 'block'
+            }
+        }
+    </script>
 </body>
 </html>
