--- a/exercicios/media-query/mq001/index.html
+++ b/exercicios/media-query/mq001/index.html
@@ -6,7 +6,8 @@
     <title>Media Query</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=menu" />
     <!--AQUI ESTÃO AS MEDIA QUERIES-->
-    <link rel="stylesheet" href="style.css" media="all">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="media-query.css">
 </head>
 <body>
     <header>
