Iniciando a tela de login

--- a/exercicios/media-query/mq001/index.html
+++ b/exercicios/media-query/mq001/index.html
@@ -8,10 +8,12 @@
     <!--AQUI ESTÃO AS MEDIA QUERIES-->
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="media-query.css">
+    <link rel="stylesheet" href="login.css">
 </head>
 <body>
     <header>
         <h1>Notícias</h1>
+        <a href="login.html" target="_blank">Login</a>
         <span id="burguer" class="material-symbols-outlined" onclick="clickMenu()">menu</span>
             <menu id="menu">
                 <ul>
