Inicio css grandes telas

--- a/exercicios/media-query/mq001/login.html
+++ b/exercicios/media-query/mq001/login.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>M.Q. Login</title>
     <link rel="stylesheet" href="login-mobile.css">
+    <link rel="stylesheet" href="login-telas.css">
 </head>
 <body>
     <main>
