--- a/exercicios/media-query/mq001/login.html
+++ b/exercicios/media-query/mq001/login.html
@@ -6,6 +6,7 @@
     <title>M.Q. Login</title>
     <link rel="stylesheet" href="login-mobile.css">
     <link rel="stylesheet" href="login-telas.css">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet"/>
 </head>
 <body>
     <main>
@@ -16,8 +17,17 @@
             <div id="formulario">
                 <h1>Login</h1>
                 <p>Seja bem-vindo(a) novamente. Faça seu login para acessar sua conta.</p>
-                <form action="login.php" method="post">
-
+                <form action="login.php" method="post" autocomplete="on">
+                    <div class="campo">
+                        <span class="material-symbols-outlined">person</span>
+                        <input type="email" name="login" id="ilogin" placeholder="Seu e-mail" autocomplete="email" required maxlength="30">
+                    </div>
+                    <div class="campo">
+                        <span class="material-symbols-outlined">key</span>
+                        <input type="password" name="senha" id="isenha" placeholder="Sua senha" autocomplete="current-password" required minlength="8" maxlength="20">
+                    </div>
+                    <input type="submit" value="Entrar">
+                    <a href="esqueci.html">Esqueci a senha <i class="material-symbols-outlined">mail</i></a>
                 </form>
             </div>
         </section>
