--- a/exercicios/media-query/mq001/login.html
+++ b/exercicios/media-query/mq001/login.html
@@ -27,7 +27,7 @@
                         <input type="password" name="senha" id="isenha" placeholder="Sua senha" autocomplete="current-password" required minlength="8" maxlength="20">
                     </div>
                     <input type="submit" value="Entrar">
-                    <a href="esqueci.html">Esqueci a senha <i class="material-symbols-outlined">mail</i></a>
+                    <a href="esqueci.html" class="botao">Esqueci a senha <i class="material-symbols-outlined">mail</i></a>
                 </form>
             </div>
         </section>
