Exemplo com align-content

--- a/exercicios/flex-box/ex002/index.html
+++ b/exercicios/flex-box/ex002/index.html
@@ -17,9 +17,10 @@
             padding: 10px;
             height: 300px;
             display: flex;
-            flex-flow: row nowrap;
+            flex-flow: row wrap;
             justify-content: space-around;
             align-items: flex-start;
+            align-content: space-around; /*só para wrap*/
         }
         div.item1{
             background-color: rgb(153, 133, 196);
